--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
-					<h1>Sahil Singhai</h1>
+					<h1>Ankit Singh</h1>
 					<h3><a href="mailto:sahilsinghai720@gmail.com" target="_blank">sahilsinghai720@gmail.com</a></h3>
+					<h3><a href="https://sahilsinghai.github.io/" target="_blank">Sahils Github</a></h3>
 				</div>			
 			</div>
 		</div>
